# goph420_w2024_lab03_AK

./: README.md  pyproject.toml
examples/: driver_earthquake.py
src/lab03_python_package/: regression.py
src/lab03_python_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_regression
