[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
 
[project]
name = "lab03_python_package"
version = "0.0.1"
authors = [
  { name="Arvin Karpiah", email="arvin.karpiah@ucalgary.ca" },
]
description="A Python package"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "sympy"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: GNU General Public License v3",
]

[project.urls]
"Homepage" = "https://github.com/arvinkarpiah/goph420_w2024_lab03_AK"